--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <header>Come back later.</header>
-    <main>This website is for HL3 info, leaks, thoerys, and more.</main>
+    <main>This website is for HL3 info, leaks, theorys, and more.</main>
     <footer></footer>
   </body>
 </html>
