--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="">
   <head>
     <meta charset="utf-8">
-    <title>wip</title>
+    <title>HL3AFAWK</title>
   </head>
   <body>
     <header>Come back later.</header>
     <main>This website is for HL3 info, leaks, theorys, and more.</main>
-    <footer></footer>
+    <footer>Half-Life 3 as far as we know</footer>
   </body>
 </html>
