--- a/index.html
+++ b/index.html
@@ -1,12 +1,64 @@
 <!DOCTYPE html>
-<html lang="">
-  <head>
-    <meta charset="utf-8">
-    <title>HL3AFAWK</title>
-  </head>
-  <body>
-    <header>Come back later.</header>
-    <main>This website is for HL3 info, leaks, theorys, and more.</main>
-    <footer>Half-Life 3 as far as we know</footer>
-  </body>
+<html>
+<head>
+	<title>HL3afawk - Half-Life 3 as Far as We Know</title>
+</head>
+<body>
+	<header>
+		<h1>HL3afawk</h1>
+		<nav>
+			<ul>
+				<li><a href="#about">About</a></li>
+				<li><a href="#characters">Characters</a></li>
+				<li><a href="#weapons">Weapons</a></li>
+				<li><a href="#locations">Locations</a></li>
+			</ul>
+		</nav>
+	</header>
+  <main>
+	<section id="about">
+		<h2>About</h2>
+		<p>HL3afawk is a website dedicated to the Half-Life series, and the possibility of Half-Life 3 being released in the future. The Half-Life series is a first-person shooter game developed by Valve Corporation, with the first game being released in 1998.</p>
+	</section>
+	
+	<section id="characters">
+		<h2>Characters</h2>
+		<ul>
+			<li>Gordon Freeman</li>
+			<li>Alyx Vance</li>
+			<li>Barney Calhoun</li>
+			<li>Dr. Wallace Breen</li>
+			<li>Dr. Eli Vance</li>
+			<li>The G-Man</li>
+		</ul>
+	</section>
+	
+	<section id="weapons">
+		<h2>Weapons</h2>
+		<ul>
+			<li>Crowbar</li>
+			<li>Gravity Gun</li>
+			<li>Shotgun</li>
+			<li>Pulse Rifle</li>
+			<li>SMG</li>
+			<li>Rocket Launcher</li>
+		</ul>
+	</section>
+	
+	<section id="locations">
+		<h2>Locations</h2>
+		<ul>
+			<li>Black Mesa Research Facility</li>
+			<li>City 17</li>
+			<li>Ravenholm</li>
+			<li>Nova Prospekt</li>
+			<li>White Forest</li>
+		</ul>
+	</section>
+</main>
+
+<footer>
+	<p>&copy; 2023 HL3afawk</p>
+</footer>
+</body>
 </html>
