--- a/index.html
+++ b/index.html
@@ -1,64 +1,10 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>HL3afawk - Half-Life 3 as Far as We Know</title>
-</head>
+<title>HL3afawk</title>
 <body>
-	<header>
-		<h1>HL3afawk</h1>
-		<nav>
-			<ul>
-				<li><a href="#about">About</a></li>
-				<li><a href="#characters">Characters</a></li>
-				<li><a href="#weapons">Weapons</a></li>
-				<li><a href="#locations">Locations</a></li>
-			</ul>
-		</nav>
-	</header>
-  <main>
-	<section id="about">
-		<h2>About</h2>
-		<p>HL3afawk is a website dedicated to the Half-Life series, and the possibility of Half-Life 3 being released in the future. The Half-Life series is a first-person shooter game developed by Valve Corporation, with the first game being released in 1998.</p>
-	</section>
-	
-	<section id="characters">
-		<h2>Characters</h2>
-		<ul>
-			<li>Gordon Freeman</li>
-			<li>Alyx Vance</li>
-			<li>Barney Calhoun</li>
-			<li>Dr. Wallace Breen</li>
-			<li>Dr. Eli Vance</li>
-			<li>The G-Man</li>
-		</ul>
-	</section>
-	
-	<section id="weapons">
-		<h2>Weapons</h2>
-		<ul>
-			<li>Crowbar</li>
-			<li>Gravity Gun</li>
-			<li>Shotgun</li>
-			<li>Pulse Rifle</li>
-			<li>SMG</li>
-			<li>Rocket Launcher</li>
-		</ul>
-	</section>
-	
-	<section id="locations">
-		<h2>Locations</h2>
-		<ul>
-			<li>Black Mesa Research Facility</li>
-			<li>City 17</li>
-			<li>Ravenholm</li>
-			<li>Nova Prospekt</li>
-			<li>White Forest</li>
-		</ul>
-	</section>
-</main>
 
-<footer>
-	<p>&copy; 2023 HL3afawk</p>
-</footer>
+<h1>W.I.P</h1>
+<p>This website is for information on Half-Life 3, leaks, theorys, hopes, and more. This page will be updated in the future with things planned, in progress, and completed. </p>
+
 </body>
 </html>
