--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <body>
 
 <h1>W.I.P</h1>
-<p>This website is for information on Half-Life 3, leaks, theorys, hopes, and more. This page will be updated in the future with things planned, in progress, and completed. </p>
+<p>This website is for information on Half-Life 3, leaks, theorys, hopes, and more. This page will be updated in the future with features (for this website) planned, in progress, and completed. </p>
 
 </body>
 </html>
