--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 
 <h1>W.I.P</h1>
 <p>This website is for information on Half-Life 3, leaks, theorys, hopes, and more. This page will be updated in the future with features (for this website) planned, in progress, and completed. </p>
-
+<p>Planned: Better UI, page on currently known info on HL3.<p>
 </body>
 </html>
