Added header, css redirect, discription, and favicon

--- a/index.html
+++ b/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html>
-<title>HL3afawk</title>
-<body>
 
-<h1>W.I.P</h1>
-<p>This website is for information on Half-Life 3, leaks, theorys, hopes, and more. This page will be updated in the future with features (for this website) planned, in progress, and completed. </p>
-<p>Planned: Better UI, page on currently known info on HL3.<p>
-<p>Half-Life 3 as far as we know<p>
+  <head>
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>HL3afawk</title>
+    <meta name="description" content="Half-Life 3 as far as we know">
+  </head>
+  
+  <body>
+  
+    <h1>W.I.P</h1>
+    <p>This website is for information on Half-Life 3, leaks, theories, hopes, and more. This page will be updated in the future with features (for this website) planned, in progress, and completed. </p>
+    <p>Planned: Better UI, page on currently known info on HL3.<p>
+    <p>Half-Life 3 as far as we know<p>
+  
   </body>
 </html>
