--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <h1>W.I.P</h1>
     <p>This website is for information on Half-Life 3, leaks, theories, hopes, and more. This page will be updated in the future with features (for this website) planned, in progress, and completed. </p>
     <p>Planned: Better UI, page on currently known info on HL3.<p>
+    <p>Quick update: Counter-Strike 2 announcement, limited access soon. So Valve wasn't lying about more games in development!<p>
     <p>Half-Life 3 as far as we know<p>
   
   </body>
