--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
   <head>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/x-icon" href="/images/favicon.png"> 
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HL3afawk</title>
     <meta name="description" content="Half-Life 3 as far as we know">
