--- a/index.html
+++ b/index.html
@@ -1,21 +1,68 @@
 <!DOCTYPE html>
 <html>
 
-  <head>
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/x-icon" href="/images/favicon.ico"> 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HL3afawk</title>
-    <meta name="description" content="Half-Life 3 as far as we know">
-  </head>
-  
-  <body>
-  
-    <h1>W.I.P</h1>
-    <p>This website is for information on Half-Life 3, leaks, theories, hopes, and more. This page will be updated in the future with features (for this website) planned, in progress, and completed. </p>
-    <p>Planned: Better UI, page on currently known info on HL3.<p>
-    <p>Quick update: Counter-Strike 2 announcement, limited access soon. So Valve wasn't lying about more games in development!<p>
-    <p>Half-Life 3 as far as we know<p>
-  
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>HL3afawk</title>
+  <style>
+    /* General styles */
+    body {
+      font-family: 'Arial', sans-serif;
+      margin: 0;
+      padding: 0;
+    }
+
+    /* Hero section styles */
+    .hero-section {
+      background-color: #000;
+      color: #fff;
+      height: 50vh;
+      position: relative;
+    }
+    .hero-image {
+      background-image: url('https://cdn.mos.cms.futurecdn.net/dbDyCqCCaehsDbSRCWXAom.jpg');
+      background-size: cover;
+      height: 100%;
+      left: 0;
+      position: absolute;
+      top: 0;
+      width: 100%;
+    }
+    .hero-text {
+      bottom: 2em;
+      position: absolute;
+      text-align: center;
+      width: 100%;
+    }
+    .hero-text h1 {
+      font-size: 3em;
+      margin: 0;
+      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+      text-transform: uppercase;
+    }
+  </style>
+</head>
+
+<body>
+  <section class="hero-section">
+    <div class="hero-image"></div>
+    <div class="hero-text">
+      <h1>HL3afawk</h1>
+      <p>Half-Life 3 as far as we know</p>
+    </div>
+  </section>
+  <section>
+    <h2>W.I.P</h2>
+    <p>This website is for information on Half-Life 3, leaks, theories, hopes, and more. This page will be updated in the future with features (for this website) planned, in progress, and completed.</p>
+    <h3>Planned:</h3>
+    <ul>
+      <li>Better UI</li>
+      <li>Page on currently known info on HL3</li>
+    </ul>
+    <p>Quick update: Counter-Strike 2 announcement, limited access soon. So Valve wasn't lying about more games in development!</p>
+  </section>
+</body>
+
 </html>
+//thanks chat-gpt
