--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     .hero-section {
       background-color: #000;
       color: #fff;
-      height: 50vh;
+      height: 70vh; /* Increase height */
       position: relative;
     }
     .hero-image {
@@ -30,7 +30,7 @@
       width: 100%;
     }
     .hero-text {
-      bottom: 2em;
+      bottom: 20%; /* Adjust position */
       position: absolute;
       text-align: center;
       width: 100%;
