--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>HL3afawk</title>
+  
+  <!-- Hello this is V, tip: The code below is css, if can be pasted in the style.css and linked to your pages to save space -->
+  
   <style>
     /* General styles */
     body {
@@ -42,6 +45,8 @@
       text-transform: uppercase;
     }
   </style>
+  
+  
 </head>
 
 <body>
