Added Css stylesheet link and moved css to style.css

--- a/index.html
+++ b/index.html
@@ -2,51 +2,10 @@
 <html>
 
 <head>
+  <link rel="stylesheet" href="style.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>HL3afawk</title>
-  
-  <!-- Hello this is V, tip: The code below is css, if can be pasted in the style.css and linked to your pages to save space -->
-  
-  <style>
-    /* General styles */
-    body {
-      font-family: 'Arial', sans-serif;
-      margin: 0;
-      padding: 0;
-    }
-
-    /* Hero section styles */
-    .hero-section {
-      background-color: #000;
-      color: #fff;
-      height: 70vh; /* Increase height */
-      position: relative;
-    }
-    .hero-image {
-      background-image: url('https://cdn.mos.cms.futurecdn.net/dbDyCqCCaehsDbSRCWXAom.jpg');
-      background-size: cover;
-      height: 100%;
-      left: 0;
-      position: absolute;
-      top: 0;
-      width: 100%;
-    }
-    .hero-text {
-      bottom: 20%; /* Adjust position */
-      position: absolute;
-      text-align: center;
-      width: 100%;
-    }
-    .hero-text h1 {
-      font-size: 3em;
-      margin: 0;
-      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-      text-transform: uppercase;
-    }
-  </style>
-  
-  
+  <title>HL3afawk</title>  
 </head>
 
 <body>
